force-app/main/default/objects/cdcpc__Global_Site_Part_Parameters_PPS__c/fields/cdcpc__PPS_VendoNo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PPS_VendoNo__c</fullName>
    <label>PPS_VendoNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>