force-app/main/default/objects/cdcpc__Global_Site_Part_Parameters_PPS__c/fields/cdcpc__VendorLTUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VendorLTUL__c</fullName>
    <label>VendorLTUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>