force-app/main/default/objects/cdcpc__Global_Site_Part_Parameters_PPS__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__SITE__c</columns>
    <columns>cdcpc__LeadTimeLL__c</columns>
    <columns>cdcpc__LeadTimeUL__c</columns>
    <columns>cdcpc__VendorSite__c</columns>
    <columns>cdcpc__VendorLTLL__c</columns>
    <columns>cdcpc__VendorLTUL__c</columns>
    <columns>cdcpc__PurchaseSite__c</columns>
    <columns>cdcpc__PPS_VendoNo__c</columns>
    <columns>cdcpc__Primary_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>